--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>❁⃝⃟𝐁𝐞𝐫𝐥𝐢𝐧戀</title>
+  <title>𝐏𝐄𝐀𝐊𝐘 𝐈𝐏𝐓𝐕 || 𝐓𝐀𝐓𝐀𝐏𝐋𝐀𝐘 || 𝐌𝟑𝐔 𝐀𝐧𝐝 𝐗𝐓𝐑𝐄𝐀𝐌 𝐂𝐎𝐃𝐄𝐒</title>
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:description" content="@technoprincemod Basically Provide Free All Type Of M3u Playlist, Mac Portals & Lot More."/>
-    <meta name="description" content=" ❁⃝⃟𝐁𝐞𝐫𝐥𝐢𝐧戀 Create a Live TV Web Anyone Can Watch Kids web & our other webs Worldwide from anywhere.">
+    <meta name="description" content="𝐏𝐄𝐀𝐊𝐘 𝐈𝐏𝐓𝐕 || 𝐓𝐀𝐓𝐀𝐏𝐋𝐀𝐘 || 𝐌𝟑𝐔 𝐀𝐧𝐝 𝐗𝐓𝐑𝐄𝐀𝐌 𝐂𝐎𝐃𝐄𝐒">
     <meta name="robots" content="noindex,nofollow">
     <meta name="googlebot" content="noindex,nofollow">
     <meta property="og:image" content="">
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Mohsin"/>
-    <meta name="author" content="Mohsin">
-    <link rel="shortcut icon" type="image/x-icon" href="https://imgdb.net/storage/uploads/bbf41c6d3297f271c07e8ff791433daa72141cbfc226bf8ed2b120eaab326399.jpg">
+    <meta name="author" content="CILLIAN">
+    <link rel="shortcut icon" type="image/x-icon" href="https://static.toiimg.com/thumb/msid-100225970,width-400,resizemode-4/100225970.jpg">
   <script src="https://cdn.jsdelivr.net/npm/lazysizes@5.3.2/lazysizes.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -25,8 +25,8 @@
 }
 
 body {
-  background-color: #000000;
-  background-image: url('https://imgdb.net/storage/uploads/bbf41c6d3297f271c07e8ff791433daa72141cbfc226bf8ed2b120eaab326399.jpg');
+  background-color: #000010;
+  background-image: url('https://static.toiimg.com/thumb/msid-100225970,width-400,resizemode-4/100225970.jpg');
   background-repeat:no-repeat;
   background-size:100% 100%;
   backdrop-filter: blur(8.7px);
@@ -249,17 +249,17 @@ p {
 <body>
   <div class='container'>
     <b:section class='header' id='header' name='Header' />
-    <img alt='profile' class='profile' src='https://imgdb.net/storage/uploads/bbf41c6d3297f271c07e8ff791433daa72141cbfc226bf8ed2b120eaab326399.jpg' class="lazyload" />
-    <p class='user-p'>❁⃝⃟𝐁𝐞𝐫𝐥𝐢𝐧戀</p>
+    <img alt='profile' class='profile' src='https://static.toiimg.com/thumb/msid-100225970,width-400,resizemode-4/100225970.jpg' class="lazyload" />
+    <p class='user-p'>𝐏𝐄𝐀𝐊𝐘 𝐈𝐏𝐓𝐕 || 𝐓𝐀𝐓𝐀𝐏𝐋𝐀𝐘 || 𝐌𝟑𝐔 𝐀𝐧𝐝 𝐗𝐓𝐑𝐄𝐀𝐌 𝐂𝐎𝐃𝐄𝐒</p>
     <p class='center-p' style='font-family: "James Bond", sans-serif;'><b style='color: white; font-size:17px''>We are glad to see that you have joined us. Thanks for your love and support&#129303;.</b></p>
-    <p class='center-p'><b style='color: white; font-size:12px''>We provide everything on your Telegram channel or groups,<br> so please join our channel or groups links are here .&#128064;&#65039;&#128071;&#65039;</b>
+    <p class='center-p'><b style='color: white; font-size:12px''>Join our Telegram Channel for more updates,<br> We have given the links below here.&#128064;&#65039;&#128071;&#65039;</b>
 </p>
     <div id='align'>
-      <a class='link shake' href='https://telegram.dog/technoprincemod'><b style='color:black; font-size:35px''>Main Channel</b></a>
-      <a class='link shake' href='https://telegram.dog/iptvfiles4all'><b style='color:black; font-size:35px''>Chat Group </b></a>
-      <a class='link shake' href='https://telegram.dog/https://t.me/mac_portals'><b style='color:black; font-size:20px''>JOIN Here For Daily Mac Portal</b></a>     
+      <a class='link shake' href='https://telegram.dog/india_iptv41'><b style='color:black; font-size:35px''>Join Channel</b></a>
+      <a class='link shake' href='https://telegram.dog/iptvfiles4all'><b style='color:black; font-size:35px''>Join Discussion</b></a>
+      <a class='link shake' href='https://telegram.dog/technoprincemod'><b style='color:black; font-size:20px''>Friend Channel</b></a>     
     </div>
-    <p class='center-footer'><b style='color: orange; font-size:20px''>Love </b> <b style='color: white; font-size:20px''>From</b> <a href='https://technoprincemod' target="_blank"><b style='color: green; font-size:20px''>❁⃝⃟𝐁𝐞𝐫𝐥𝐢𝐧戀 
+    <p class='center-footer'><b style='color: orange; font-size:20px''>Love </b> <b style='color: white; font-size:20px''>From</b> <a href='https://technoprincemod' target="_blank"><b style='color: green; font-size:20px''>𝐏𝐄𝐀𝐊𝐘 𝐈𝐏𝐓𝐕 || 𝐓𝐀𝐓𝐀𝐏𝐋𝐀𝐘 || 𝐌𝟑𝐔 𝐀𝐧𝐝 𝐗𝐓𝐑𝐄𝐀𝐌 𝐂𝐎𝐃𝐄𝐒 
 </b></a></p>
   </div>
 <!-- Cloudflare Pages Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "cbe523d7d14145a0b702e59927ea8abc"}'></script><!-- Cloudflare Pages Analytics --></body>
