--- a/TataPlay/index.html
+++ b/TataPlay/index.html
@@ -21,7 +21,7 @@
       }
     </style>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content=";url=https://telegram.dog/india_iptv41"> 
+    <meta http-equiv="refresh" content="0;url=https://telegram.dog/india_iptv41">
 </head>
 <body>
       <h1>тคтค pℓคყ</h1>
