--- a/TataPlay/index.html
+++ b/TataPlay/index.html
@@ -1400,6 +1400,12 @@ http://rftv.wtf/tp/rjiptv.mpd?contentID=128
 #EXTINF:-1 tvg-id=ts252 tvg-logo="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-8849-j7pqmypc-v2/imageContent-8849-j7pqmypc-m3.png" group-title="Telugu",Zee Cinemalu
 http://rftv.wtf/tp/rjiptv.mpd?contentID=252
 
+#EXTINF:-1 tvg-ID="" tvg-name="PK-VIP: PTV SPORTS" tvg-logo="" group-title="ICC CRICKET WORLDCUP 2023",PTV SPORTS FHD
+http://iptv-plus.net:25461/@ttkiller/UFCPCNSP0NZZ2SK/93416
+#EXTINF:-1 tvg-ID="" tvg-name="PK-VIP: PTV SPORTS HD" tvg-logo="" group-title="ICC CRICKET WORLDCUP 2023",PTV SPORTS SD
+http://iptv-plus.net:25461/@ttkiller/UFCPCNSP0NZZ2SK/93417
+#EXTINF:-1 tvg-ID="" tvg-name="HINDI: DISNEY SD" tvg-logo="http://vodkom.com:25461/Logo/INDIA/DISNEY.png" group-title="Kids",DISNEY SD
+http://iptv-plus.net:25461/@ttkiller/UFCPCNSP0NZZ2SK/96278
 #KODIPROP:inputstream.adaptive.license_type=clearkey
 #KODIPROP:inputstream.adaptive.license_key=https://vercel-php-clearkey-hex-base64-json.vercel.app/api/results.php?keyid=6653c05e42fc4fac8f49d7cbf99498fe&key=3b88f2cff3affef20b265c840bafc0cc
 #EXTINF:-1 tvg-id="" tvg-logo="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFS_dqXducppY9buVlbRxRacy8StzRu_4MPChjzQ0UAmlAylvbjZV70N8&s=10" group-title="ICC CRICKET WORLDCUP 2023",Willow Cricket
