--- a/TataPlay/index.html
+++ b/TataPlay/index.html
@@ -1404,7 +1404,7 @@ http://rftv.wtf/tp/rjiptv.mpd?contentID=252
 http://iptv-plus.net:25461/@ttkiller/UFCPCNSP0NZZ2SK/93416
 #EXTINF:-1 tvg-ID="" tvg-name="PK-VIP: PTV SPORTS HD" tvg-logo="" group-title="ICC CRICKET WORLDCUP 2023",PTV SPORTS SD
 http://iptv-plus.net:25461/@ttkiller/UFCPCNSP0NZZ2SK/93417
-#EXTINF:-1 tvg-ID="" tvg-name="HINDI: DISNEY SD" tvg-logo="http://vodkom.com:25461/Logo/INDIA/DISNEY.png" group-title="Kids",DISNEY SD
+#EXTINF:-1 tvg-ID="" tvg-name="HINDI: DISNEY HD" tvg-logo="http://vodkom.com:25461/Logo/INDIA/DISNEY.png" group-title="Kids",DISNEY SD
 http://iptv-plus.net:25461/@ttkiller/UFCPCNSP0NZZ2SK/96278
 #KODIPROP:inputstream.adaptive.license_type=clearkey
 #KODIPROP:inputstream.adaptive.license_key=https://vercel-php-clearkey-hex-base64-json.vercel.app/api/results.php?keyid=6653c05e42fc4fac8f49d7cbf99498fe&key=3b88f2cff3affef20b265c840bafc0cc
